change the livecd install for the new livecd layout
update efi installation to have the os folder in the efi partition

--- a/conf/pc-sysinstall.conf
+++ b/conf/pc-sysinstall.conf
@@ -56,8 +56,9 @@ export PKGTMPDIR
 # Variables to set the location of installation data
 UZIP_FILE="PCBSD.ufs.uzip"
 TAR_FILE="PCBSD.tbz"
-SYSTEM_UZIP_FILE="/cdrom/data/system.uzip"
-export UZIP_FILE TAR_FILE SYSTEM_UZIP_FILE
+USR_UZIP_FILE="/cdrom/data/usr.uzip"
+MFS_TAR_FILE="/cdrom/data/mfs.tgz"
+export UZIP_FILE TAR_FILE USR_UZIP_FILE
 
 # Locations of FreeBSD only install files
 FBSD_UZIP_FILE="fbsd-release.ufs.uzip"
