remove the code to add vfs.root.mountfrom in loader.conf
Changed the default pool name to zroot and BENAME to default instead of initial.

--- a/conf/pc-sysinstall.conf
+++ b/conf/pc-sysinstall.conf
@@ -85,6 +85,6 @@ fi
 
 MIRRORLIST="${NETSERVER}/mirrors-netinstall.php?ver=${VERSION}&arch=${ARCH}"
 
-# The default/initial BE we create on new installation
-BENAME="initial"
+# The default/ BE we create on new installation
+BENAME="default"
 export BENAME
